# concrete-mixer-scale-esp32

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TODO.md  partitions.csv  platformio.ini  sdkconfig.defaults
docs/: 01-overview-and-modules.md  02-module-interactions-and-scenarios.md  03-design-decisions-and-maintenance.md  ShemaCodex.md
include/config/: hardware_config.hpp  network_config.hpp  wifi_secrets.example.hpp
include/display/: display.hpp  linear_indicator.hpp  spinner.hpp
include/domain/: weight_types.hpp
include/measurement/: load_cell_reader.hpp  load_cell_sampler.hpp
include/platform/: hx711_bus.hpp  hx711_reader.hpp
include/processing/: weight_filters.hpp  weight_processor.hpp
include/settings/: settings_store.hpp
include/storage/: web_assets.hpp
include/web/: web_server.hpp  wifi_manager.hpp
scripts/: esptool_no_py_warning.py  upload_www.ps1  upload_www_after_firmware.py  use_esptool_no_py_warning.py
src/: CMakeLists.txt  idf_component.yml  main.cpp
src/display/: display.cpp  hub75_display.cpp  linear_indicator.cpp  spinner.cpp
src/measurement/: load_cell_reader.cpp  load_cell_sampler.cpp
src/platform/: hx711_bus.cpp  hx711_reader.cpp
src/processing/: weight_filters.cpp  weight_processor.cpp
src/settings/: settings_store.cpp
src/storage/: web_assets.cpp
src/web/: web_server.cpp  wifi_manager.cpp
www/: app.css  app.js  index.html  process.html  process.js
